--- a/public/unity/unity.html
+++ b/public/unity/unity.html
@@ -8,8 +8,15 @@
         <script>
             UnityLoader.instantiate("unityContainer", "Build/BDAO Treasury Page.json");
         </script>
+
+        <style>
+            .unity {
+                width: 100%;
+                height: 100%;
+            }
+        </style>
     </head>
-    <body>
-        <div id="unityContainer" class="w-full aspect-video m-auto"></div>
+    <body style="margin: 0; padding: 0">
+        <div id="unityContainer" class="unity"></div>
     </body>
 </html>
