feat: added new unity scene

--- a/public/unity/index.html
+++ b/public/unity/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us" class="overflow-hidden">
+<html lang="en-us">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -11,11 +11,10 @@
         <script>
             var unityInstance = UnityLoader.instantiate(
                 "unityContainer",
-                "Build/BdaoTreasury WebGL.json",
+                "Build/BdaoTreasury WebGL - Copy.json",
                 { onProgress: UnityProgress }
             );
         </script>
-
         <style>
             html,
             body {
@@ -28,9 +27,9 @@
     <body>
         <div id="unityContainer" class="w-full" style="aspect-ratio: 8/5; overflow: hidden"></div>
         <!-- <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">BDAO-Treasury</div>
-      </div> -->
+      <div class="webgl-logo"></div>
+      <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
+      <div class="title">BDAO-Treasury</div>
+    </div> -->
     </body>
 </html>
